Fix header style on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -142,7 +142,7 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     z-index: 10;
 
     li {
-      margin: 20px 0;
+      margin: 0;
 
       a {
         color: var(--white);
